# Rust-body-simulation

./: Cargo.toml  build.rs
src/: basic_particle_logic.rs  bindings.rs  brute_force.cu  brute_force.cuh  classes.rs  cuda_main.cu  derives.rs  main.rs  quad.rs  setup.rs
