[package]
name = "Rust-body-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_dev_tools = "0.16.0"
fastrand = "2.3.0"


[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rstest = "0.25.0"
